tests/ui/fail/bad_nesting_2.stderr
error: the repetition used for `a` (`*`) is different from how it is matched (`?+*`).
 --> tests/ui/fail/bad_nesting_2.rs:5:13
  |
5 |         $( $a )*
  |             ^
